Fix password input text overlap with eye icon
- Increase right padding to 60px to prevent text overlap
- Eye icon now has proper clearance from placeholder text
- Maintains icon positioning flush against right edge

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1720,7 +1720,7 @@ input[type="time"].form-input:focus {
 }
 
 .login-form .form-group:has(.password-toggle) input {
-  padding-right: 50px;
+  padding-right: 60px;
 }
 
 .login-form .form-group input:focus {
